fix bug for select options overflow

--- a/static/css/kendo.store.css
+++ b/static/css/kendo.store.css
@@ -73,6 +73,11 @@ td.k-group-cell,
   border-color: #bbbbbb;
   background-color: #ffffff;
 }
+.k-list {
+  -moz-overflow: auto;
+  overflow: auto;
+   -webkit-overflow-scrolling: touch; /* User touch the list, the scroll bar will appear */
+}
 .k-content,
 .k-editable-area,
 .k-panelbar > li.k-item,
